# so-arm100-ros1

./: CMakeLists.txt  README.md  package.xml  so_arm_100_hardware.xml
config/: calibration.yaml  controllers.yaml  joint_limits.yaml
include/SCServo_Linux/: CMakeCache.txt  CMakeLists.txt  Makefile  SMS_STS.cpp  cmake_install.cmake
include/so_arm_100_hardware/: so_arm_100_interface.h
launch/: bringup.launch  bringup_minimal.launch
scripts/: send_initial_pose.py  zero_pose.py
src/: so_arm_100_hw_node.cpp  so_arm_100_interface.cpp
src/SCServo_Linux/: CMakeCache.txt  Makefile  SCS.h  SCSCL.cpp  SCServo.cpp  SMSBL.cpp  SMSCL.cpp  SMS_STS.h  cmake_install.cmake
srv/: GetServo.srv  SetServo.srv  ToggleTorque.srv
urdf/: so100.urdf
