<?xml version="1.0"?>
<package format="2">
  <name>arm100_hardware</name>
  <version>0.1.0</version>
  <description>Hardware interface for SO-ARM-100 manipulator (ROS Noetic).</description>
  <maintainer email="bruk@signalbotics.com">Bruk Gebregziabher</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <export>
    <hardware_interface plugin="${prefix}/so_arm_100_hardware.xml"/>
  </export>
</package>
